some error handling in users and in rooms components

--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -20,6 +20,7 @@
       </tr>
       </tbody>
     </table>
+    <div *ngIf="loadingData">{{message}}</div>
   </div>
   <div class="col-6">
     <app-user-detail *ngIf="action==='view'" [user]="selectedUser"></app-user-detail>
