--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -1,4 +1,4 @@
-<h1>{{user.id == 0? 'Add':'Edit'}}User</h1>
+<h1>{{user?.id == 0 ? 'Add':'Edit'}}User</h1>
 
 <div class="bg-warning p-5" *ngIf="message">{{message}}</div>
 
@@ -13,7 +13,7 @@
 
   </div>
 
-  <div class="form-group" *ngIf="user.id == 0">
+  <div class="form-group" *ngIf="user?.id == 0">
     <label for="password">Password</label>
     <input type="password" class="form-control" id="password" placeholder="password" [(ngModel)]="password"
            name="password" (change)="checkIfPasswordsAreValid()" required #pass1="ngModel">
@@ -23,7 +23,7 @@
     <label for="password2">Repeat password</label>
     <input type="password" class="form-control" id="password2" placeholder="password" [(ngModel)]="password2"
            name="password2" (change)="checkIfPasswordsAreValid()" required #pass2="ngModel">
-    <div class="alert alert-danger" [hidden]="passwordsMatch">The passwords must match</div>
+    <div class="alert alert-danger" [hidden]="passwordsMatch  || pass1.untouched">The passwords must match</div>
 
   </div>
 
