--- a/src/app/calendar/edit-booking/edit-booking.component.html
+++ b/src/app/calendar/edit-booking/edit-booking.component.html
@@ -1,12 +1,11 @@
 <h1>{{booking.id == null ? 'Add' : 'Edit'}} Booking</h1>
-
-<form>
+<div class="bg-warning p-5" *ngIf="message"></div>
+<form *ngIf="dataLoaded">
   <div class="row">
     <div class="form-group col-4">
       <label for="date">Date</label>
       <input type="date" class="form-control" id="date" [(ngModel)]="booking.date" name="date">
     </div>
-
     <div class="form-group col-4">
       <label for="startTime">Start time</label>
       <input type="time" class="form-control" id="startTime" [(ngModel)]="booking.startTime" name="startTime">
