--- a/src/app/calendar/edit-booking/edit-booking.component.html
+++ b/src/app/calendar/edit-booking/edit-booking.component.html
@@ -1,4 +1,4 @@
-<h1>{{booking.id == null ? 'Add' : 'Edit'}} Booking</h1>
+<h1>{{booking?.id == 0 ? 'Add' : 'Edit'}} Booking</h1>
 <div class="bg-warning p-5" *ngIf="message"></div>
 <form *ngIf="dataLoaded">
   <div class="row">
@@ -24,7 +24,7 @@
       <label for="room">Room</label>
       <select class="form-control" id="room"  [(ngModel)]="booking.room" name="room">
         <!-- repeat the option for each room -->
-        <option *ngFor="let room of rooms" [ngValue]="room">{{room.name}}</option>
+        <option *ngFor="let room of rooms" [ngValue]="room">{{room?.name}}</option>
       </select>
     </div>
 
@@ -48,7 +48,7 @@
       <label for="layout">User</label>
       <select class="form-control" id="user" [(ngModel)]="booking.user" name="user">
         <!-- repeat the option for each user -->
-        <option *ngFor="let user of users" [ngValue]="user">{{user.name}}</option>
+        <option *ngFor="let user of users" [ngValue]="user">{{user?.name}}</option>
       </select>
     </div>
 
